--- a/src/Components/ContactForm/ContactForm.css
+++ b/src/Components/ContactForm/ContactForm.css
@@ -40,11 +40,11 @@
   padding: 10px;
   border: none;
   border-radius: 5px;
-  background-color: #007bff;
+  background-color: rgb(11, 170, 11);
   color: #fff;
   cursor: pointer;
 }
 
 .form-submit:hover {
-  background-color: #0056b3;
+  background-color: green;
 }
